--- a/config.toml
+++ b/config.toml
@@ -13,9 +13,9 @@ disableKinds = ["taxonomy", "term"]
   # image = "img/author.jpg"  # path relative to static directory
 
   links = [
-    { vagrant = { href = "https://fteychene.github.io/cloud-101-course/getting-started-vagrant/index.html", text = "Vagrant" }},
-    { ansible = { href = "https://fteychene.github.io/cloud-101-course/getting-started-ansible/index.html", text = "Ansible" }},
-    { kubernetes = { href = "https://fteychene.github.io/cloud-101-course/getting-started-kubernetes/index.html", text = "Kubernetes" }}
+    { vagrant = { href = "getting-started-vagrant/index.html?index=cloud-101-course", text = "Vagrant" }},
+    { ansible = { href = "getting-started-ansible/index.html&index=cloud-101-course", text = "Ansible" }},
+    { kubernetes = { href = "getting-started-kubernetes/index.html?index=cloud-101-course", text = "Kubernetes" }}
   ]
 
 [module]
